# ai4pet

./: .gitignore  README.md  app.py  config.yaml  picture_app.py  requirements.txt
.devcontainer/: devcontainer.json
archived/: picture_app.py  toy_data.json
archived/evaluation/: README.md  eval_by_gpt.py  view_eval_results_app.py
evaluation/: eval_results_checkpoint.json  view_eval_results_app.py
pet-filter/: README.md  app.py  identify_vulnerables.py  pyproject.toml  rate_cat_attractiveness.py  rate_dog_attractiveness.py  requirements.txt  suggest_dog_room_changes.py  suggest_room_changes.py
pet-filter/pages/: pet_analysis_new.py
