[project]
name = "pet-filter"
version = "0.1.0"
description = "Cat Vision Camera Filter - See the world through a cat's eyes"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.28.0",
    "numpy>=1.24.0",
    "opencv-contrib-python-headless>=4.8.0",
    "av>=10.0.0",
    "streamlit-webrtc>=0.45.0",
    "pillow>=10.0.0",
    "transformers",
    "torch",
]

[dependency-groups]
dev = []
